[tool.poetry]
name = "my-simple-blog"
version = "0.1.0"
description = ""
authors = ["Artem Burenin"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.24"
asyncpg = "^0.24.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
alembic = "^1.7.3"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"
pytest = "^6.2.5"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
